# rust-ipc

./: Cargo.toml
windows-named-pipe/: Cargo.toml
windows-named-pipe/src/: buffer.rs  channel.rs  client.rs  event.rs  lib.rs  pipe.rs  runtime.rs  server.rs  server_pipe.rs  utils.rs
windows-named-pipe/src/buffer/: double_buffer.rs  io_buffer.rs
windows-named-pipe/src/runtime/: utils.rs
windows-named-pipe/tests/: test.rs
