[package]
name = "windows-named-pipe"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.1", features = [
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Threading",
]}

[dev-dependencies]
spin_sleep = "1.3.1"


